# EventStreamCore-

./: .gitignore  CMakeLists.txt  README.md  test.py
Test/: CMakeLists.txt  EventProcessorTest.cpp  EventTest.cpp  StorageTest.cpp  TcpingestTest.cpp
Test/invalidConfig/: invalid_type.yaml  invalid_value.yaml
benchmark/: CMakeLists.txt  benchmark.cpp
config/: config.yaml
include/config/: AppConfig.hpp  ConfigLoader.hpp
include/event/: Event.hpp  EventBus.hpp  EventBusMulti.hpp  EventFactory.hpp
include/eventprocessor/: event_processor.hpp  realtime_processor.hpp
include/ingest/: ingest_server.hpp  tcp_parser.hpp  tcpingest_server.hpp
include/memory/: event_memorypool.hpp  memory_allocator.hpp
include/storage_engine/: storage_engine.hpp
include/utils/: thread_pool.hpp
src/app/: main.cpp
src/config/: CMakeLists.txt  ConfigLoader.cpp
src/event/: CMakeLists.txt  EventBus.cpp  EventFactory.cpp
src/event_processor/: CMakeLists.txt  event_processor.cpp  realtime_processor.cpp
src/ingest/: CMakeLists.txt  tcp_parser.cpp  tcpingest_server.cpp
src/storage_engine/: CMakeLists.txt  storage_engine.cpp
src/utils/: CMakeLists.txt  thread_pool.cpp
unittest/: CMakeLists.txt  ConfigLoaderTest.cpp  EventProcessorTest.cpp  EventTest.cpp  StorageTest.cpp  TcpingestTest.cpp
unittest/invalidConfig/: missing_field.yaml
